Fix BundleData::GetBundleRootDirOutput() for non-default toolchain.

The "create_bundle" targets defines in build/config/{mac,ios}/rules.gni
put their outputs in "$root_out_dir". This directory is different from
the top-level output directory from BuildSettings and instead correspond
to the Settings toolchain output directory.

Fix BundleData::GetBundleRootDirOutput() to compute the bundle root
directory output relative to the toolchain output directory to fix
dependencies when a "create_bundle" target is defined in the non-default
toolchain.

Fix TestWithScope constructor to ensure that BuildSettings::SetBuildDir
call is made before the call to Settings constructor (as the toolchain
output directory is initialized from the BuildSettings build_dir).

Remove unnecessary calls to setup.build_settings().SetBuildDir() as
the value is already set in TestWithScope constructor.

BUG=603180

Review-Url: https://codereview.chromium.org/2101923006
Cr-Commit-Position: refs/heads/master@{#403446}

Former-commit-id: 3fed8056522b525d1ee49acc5a04c6b3c3c229bb