tools/gn/function_rebase_path_unittest.cc
@@ -32,7 +32,6 @@ std::string RebaseOne(Scope* scope,
 
 TEST(RebasePath, Strings) {
   TestWithScope setup;
-  setup.build_settings()->SetBuildDir(SourceDir("//out/Debug/"));
   Scope* scope = setup.scope();
   scope->set_source_dir(SourceDir("//tools/gn/"));
 
@@ -151,7 +150,6 @@ TEST(RebasePath, StringsSystemPaths) {
 // Test list input.
 TEST(RebasePath, List) {
   TestWithScope setup;
-  setup.build_settings()->SetBuildDir(SourceDir("//out/Debug/"));
   setup.scope()->set_source_dir(SourceDir("//tools/gn/"));
 
   std::vector<Value> args;
@@ -175,7 +173,6 @@ TEST(RebasePath, List) {
 
 TEST(RebasePath, Errors) {
   TestWithScope setup;
-  setup.build_settings()->SetBuildDir(SourceDir("//out/Debug/"));
 
   // No arg input should issue an error.
   Err err;
